--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
         let selectedEmployeeId = null;
 
         // Add some sample employees
-        payroll.addEmployee('John Smith', 25.00, 'Engineering');
-        payroll.addEmployee('Jane Doe', 22.50, 'Sales');
-        payroll.addEmployee('Mike Johnson', 30.00, 'Management');
+        payroll.addEmployee('Wayne Zacharias', 50.00, 'RN');
+        payroll.addEmployee('Deidre Bailey', 35.00, 'LPN');
+        payroll.addEmployee('Leanne West', 28.00, 'Care Aide');
 
         function addEmployee() {
             const name = document.getElementById('employeeName').value;
