--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
             font-weight: bold;
             cursor: pointer;
             transition: all 0.2s ease;
-            opacity: 0.7;
+            opacity: 0;
+            transform: scale(0.8);
         }
 
         .plus-button:hover {
@@ -297,6 +298,7 @@
 
         .calendar-day:hover .plus-button {
             opacity: 1;
+            transform: scale(1);
         }
 
         /* Settings Modal */
